refactor: rerouted /validate to /token/validate
