# src/middleware/validationMiddleware.js
@@ -3,7 +3,37 @@ import { redisClient, deleteToken } from '../config/redis.js';
 import logger from '../config/logger.js';
 import User from '../schemas/User.js';
 
-export const validateToken = async (req, res, next) => {
+const validateToken = async (token, req, res) => {
+  const user = await User.findById(req.userId);
+
+  if (!user) {
+    logger.warn('User not found', {
+      requestId: req.headers && req.headers['x-request-id'] || null,
+      ip: req.headers && req.headers['x-forwarded-for'] || req.ip,
+      method: req.method,
+      url: req.originalUrl,
+      userId: req.userId,
+    });
+    return res.status(401).json({ message: 'User not found' });
+  }
+
+  const tokenValid = await redisClient.exists(token);
+
+  if (!tokenValid) {
+    logger.warn('Token expired', {
+      requestId: req.headers && req.headers['x-request-id'] || null,
+      ip: req.headers && req.headers['x-forwarded-for'] || req.ip,
+      method: req.method,
+      url: req.originalUrl,
+    });
+    await deleteToken(req.userId, token);
+    return res.status(401).json({ message: 'Token expired' });
+  }
+
+  return true;
+};
+
+export const validateAuthToken = async (req, res, next) => {
   const token = req.cookies.token;
   if (!token) {
     return res.status(401).json({ message: 'No token provided' });
@@ -17,50 +47,28 @@ export const validateToken = async (req, res, next) => {
     req.userId = decoded.userId;
     req.roles = decoded.roles;
 
-    const user = await User.findById(req.userId);
+    const isTokenValid = await validateToken(token, req, res);
 
-    if (!user) {
-      logger.warn('User not found', {
-        method: req.method,
-        url: req.originalUrl,
-        userId: req.userId,
-        ip: req.headers && req.headers['x-forwarded-for'] || req.ip,
-        requestId: req.headers && req.headers['x-request-id'] || null,
-      });
-      return res.status(401).json({ message: 'User not found' });
+    if (typeof isTokenValid === 'boolean' && isTokenValid) {
+      next();
     }
-
-    const tokenValid = await redisClient.exists(token);
-
-    if (!tokenValid) {
-      logger.warn('Token expired', {
-        method: req.method,
-        url: req.originalUrl,
-        ip: req.headers && req.headers['x-forwarded-for'] || req.ip,
-        requestId: req.headers && req.headers['x-request-id'] || null,
-      });
-      await deleteToken(req.userId, token);
-      return res.status(401).json({ message: 'Token expired' });
-    }
-
-    next();
   } catch (error) {
     if (error instanceof jwt.TokenExpiredError) {
       logger.error('Error on token validation', {
+        requestId: req.headers && req.headers['x-request-id'] || null,
+        ip: req.headers && req.headers['x-forwarded-for'] || req.ip,
         method: req.method,
         url: req.originalUrl,
         error: error,
-        ip: req.headers && req.headers['x-forwarded-for'] || req.ip,
-        requestId: req.headers && req.headers['x-request-id'] || null,
       });
       return res.status(401).json({ message: 'Token expired' });
     } else {
       logger.error('Error on token validation', {
+        requestId: req.headers && req.headers['x-request-id'] || null,
+        ip: req.headers && req.headers['x-forwarded-for'] || req.ip,
         method: req.method,
         url: req.originalUrl,
         error: error,
-        ip: req.headers && req.headers['x-forwarded-for'] || req.ip,
-        requestId: req.headers && req.headers['x-request-id'] || null,
       });
       return res.status(401).json({ message: 'Invalid token' });
     }
