# src/routes/tokenRoutes.js
@@ -1,9 +1,9 @@
 import express from 'express';
 import { validate } from '../controllers/validationController.js';
-import { validateToken } from '../middleware/validationMiddleware.js';
+import { validateAuthToken } from '../middleware/validationMiddleware.js';
 
 const router = express.Router();
 
-router.get('/validate', validateToken, validate);
+router.get('/validate', validateAuthToken, validate);
 
 export default router;
