# src/routes/userRoutes.js
@@ -10,7 +10,7 @@ import {
   enable2FA,
   verify2FA,
 } from '../controllers/userController.js';
-import { validateToken, validate } from '../middleware/validationMiddleware.js';
+import { validateAuthToken, validate } from '../middleware/validationMiddleware.js';
 import { userExists, authorizeRequest } from '../middleware/authMiddleware.js';
 import {
   userValidator,
@@ -24,7 +24,7 @@ const router = express.Router();
 
 router.post(
   '/users',
-  validateToken,
+  validateAuthToken,
   validate(userValidator),
   authorizeRequest('create'),
   createUser
@@ -32,7 +32,7 @@ router.post(
 
 router.get(
   '/users/:id',
-  validateToken,
+  validateAuthToken,
   userExists,
   authorizeRequest('get'),
   getUser
@@ -40,7 +40,7 @@ router.get(
 
 router.put(
   '/users/:id',
-  validateToken,
+  validateAuthToken,
   userExists,
   validate(userEditValidator),
   authorizeRequest('edit'),
@@ -49,7 +49,7 @@ router.put(
 
 router.delete(
   '/users/:id',
-  validateToken,
+  validateAuthToken,
   userExists,
   authorizeRequest('delete'),
   deleteUser
@@ -57,7 +57,7 @@ router.delete(
 
 router.post(
   '/users/change-password',
-  validateToken,
+  validateAuthToken,
   validate(changePasswordValidator),
   authorizeRequest('changePassword'),
   changePassword
@@ -67,7 +67,7 @@ router.post('/login', validate(userLoginValidator), login);
 
 router.post('/logout', logout);
 
-router.post('/users/enable-2fa', validateToken, enable2FA);
+router.post('/users/enable-2fa', validateAuthToken, enable2FA);
 
 router.post('/users/verify-2fa', validate(verify2FAValidator), verify2FA);
 
